[gd_scene load_steps=2 format=3 uid="uid://dxl0bau8tribr"]

[ext_resource type="Script" uid="uid://d1oo8dcu47rka" path="res://ui/ui_components/adventurer_card.gd" id="1_7qp1a"]

[node name="AdventurerCard" type="PanelContainer"]
offset_right = 100.0
offset_bottom = 120.0
script = ExtResource("1_7qp1a")
metadata/_custom_type_script = "uid://d1oo8dcu47rka"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2

[node name="HealthContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HealthContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StatsContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="StrLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DexLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="IntLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MagLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
